--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,13 @@ fabric.properties
 # Editor-based Rest Client
 .idea/httpRequests
 
+/Collections.iml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/vcs.xml
+.DS_Store
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
+Collections.iml
+src/.DS_Store
